src/test/deca/context/invalid/ContextAvecObjet/DeclFields/inexistingFieldCall.deca
// Description:
//    Appel à un champ inextistant
//
// Resultats:
//    Erreur contextuelle ligne 14
//    identificateur non défini

class A {
    protected int x;
}

{
    A a = new A();
    a.y;
}
